# cfht2caom2

./: .gitlab-ci.yml  2661571.xml  Dockerfile  README.md  setup.cfg  setup.py
blank2caom2/: composable.py  main_app.py
blank2caom2/tests/: test_main_app.py  test_storage_name.py
cfht2caom2/: __init__.py  builder.py  cfht_builder.py  cfht_data_source.py  cfht_name.py  cleanup_augmentation.py  composable.py  data_source.py  espadons_energy_augmentation.py  file2caom2_augmentation.py  fits2caom2_augmentation.py  instruments.py  main_app.py  metadata.py  preview_augmentation.py  reader.py  work.py
cfht2caom2/tests/: cache.yml  cfht_mocks.py  config.yml  conftest.py  test_builder.py  test_cache.py  test_caom_gen_visit.py  test_cleanup_augmentation.py  test_composable.py  test_data_source.py  test_espadons_energy_augmentation.py  test_existing_obs_blueprint.py  test_fits2caom2_augmentation.py  test_hdf5.py  test_main_app.py  test_multi_plane.py  test_preview_augmentation.py  test_storage_name.py  x.xml
cfht2caom2/tests/data/: 03Am02.dark.1800.36.00.expected.xml  03Am02.dark.1800.36.00.fits.header  03Am05.fringe.z.36.00.expected.xml  03Am05.fringe.z.36.00.fits.header  07Bm06.flat.z.36.02.expected.xml  07Bm06.flat.z.36.02.fits.header  1000003.expected.xml  1000003f.fits.header  1001063.expected.xml  2014318.xml  (+105 more)
config/: cache.yml  config.yml
scripts/: Dockerfile.cfht  ESPaDOnS.definitive.txt  SPIRou.definitive.txt  cache.yml  cfht_run.sh  cfht_run_at_cfht.sh  cfht_run_state.sh  config.yml  docker-entrypoint.sh  get_test_data.sh
tests/data/: megacam_preview_start.xml
(+353 files in other folders)
